@@ -38,6 +38,7 @@ Cacti CHANGELOG
 -issue#5199: Failures to call fgets generate errors in the Cacti.log
 -issue#5200: Cacti function throws errors when attempting to render classic images in PHP8 
 -issue#5201: Minor issues in modern and dark prevent weathermaps from rendering correctly
+-issue#5203: Scripts ss_net_snmp_device_io.php and ss_net_snmp_device_bytes.php break when using HMIB plugin and PHP8.1
 
 1.2.23
 -security#4920: Add .htaccess file to scripts folder
